[gd_scene load_steps=26 format=3 uid="uid://b02se2y4rkdwk"]

[ext_resource type="PackedScene" uid="uid://lwbm555q4l6v" path="res://scene/npc.tscn" id="1_gmlbj"]
[ext_resource type="Script" uid="uid://xjqqwks4jnbg" path="res://scripts/spiders.gd" id="2_ry43e"]
[ext_resource type="Texture2D" uid="uid://bqnn1m8fx08fe" path="res://assets/spider.png" id="3_syueq"]
[ext_resource type="AudioStream" uid="uid://df7tkluxjl5au" path="res://assets/SFX/spider.ogg" id="4_d7eb3"]
[ext_resource type="PackedScene" uid="uid://dcv6rxbagi8t0" path="res://scene/destination.tscn" id="5_5voa5"]
[ext_resource type="Texture2D" uid="uid://bmmhhij0uxb26" path="res://assets/background.png" id="6_dp7ty"]
[ext_resource type="Texture2D" path="res://assets/kitchen room/barre.png" id="7_kdlwf"]
[ext_resource type="Texture2D" uid="uid://ddtadj4ipd1r0" path="res://assets/arrow.png" id="8_qvni5"]
[ext_resource type="FontFile" uid="uid://cuq8cid3txxts" path="res://assets/fonts/Unkempt-Regular.ttf" id="9_0owg7"]
[ext_resource type="Script" uid="uid://dn2kmxqg0v0xc" path="res://countdown.gd" id="10_4mydg"]
[ext_resource type="Texture2D" uid="uid://c1l4r7vns6seh" path="res://assets/contols.png" id="11_5sf87"]
[ext_resource type="Texture2D" path="res://assets/Araignée.png" id="12_83kta"]
[ext_resource type="AudioStream" uid="uid://bat8y31tjwrwr" path="res://assets/SFX/prototypejenaimarre.ogg" id="13_j4xm5"]
[ext_resource type="Script" uid="uid://le42puuhmucy" path="res://move_rooms.gd" id="14_hg8a6"]
[ext_resource type="PackedScene" uid="uid://7j1od1qia3u1" path="res://kitchen_room.tscn" id="15_w70r5"]
[ext_resource type="PackedScene" uid="uid://46bdfyfs2pcc" path="res://bath_room.tscn" id="16_2qko3"]
[ext_resource type="PackedScene" uid="uid://dmo6ch2xreba2" path="res://living_room.tscn" id="17_csqer"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5vw27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cegan"]
bg_color = Color(0, 0, 0, 0.4117647)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaehf"]
bg_color = Color(0.11370932, 0.52130616, 0.20927158, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="GDScript" id="GDScript_272bh"]
resource_name = "fear_bar"
script/source = "extends ProgressBar
func _ready() -> void:
	SignalBus.fear_changed.connect(fear_changed)

func fear_changed():
	self.value = Globals.fear
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82xsv"]
bg_color = Color(0.9185014, 0.00020368934, 0.7928726, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="GDScript" id="GDScript_yaehf"]
script/source = "extends ProgressBar

func _ready() -> void:
	SignalBus.fear_changed.connect(fear_changed)

func fear_changed():
	self.value = Globals.pnj1_fear
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_074og"]
bg_color = Color(1.347661e-06, 0.6286073, 0.9842388, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="GDScript" id="GDScript_074og"]
script/source = "extends ProgressBar

func _ready() -> void:
	SignalBus.fear_changed.connect(fear_changed)

func fear_changed():
	self.value = Globals.pnj2_fear
"

[node name="Main" type="Node2D"]

[node name="NPC" type="Node" parent="."]

[node name="NPC" parent="NPC" node_paths=PackedStringArray("target") instance=ExtResource("1_gmlbj")]
position = Vector2(-9, 281)
target = NodePath("../Destinations/LR")

[node name="spiders" type="Node2D" parent="NPC" node_paths=PackedStringArray("move_sound", "jump_sound")]
script = ExtResource("2_ry43e")
spider_count = 5
move_speed = 500.0
base_spread = 200.0
spider_scale = 0.6999999999970896
spritesheet = ExtResource("3_syueq")
move_sound = NodePath("MovePlayer")
jump_sound = NodePath("JumpPlayer")

[node name="JumpPlayer" type="AudioStreamPlayer" parent="NPC/spiders"]

[node name="MovePlayer" type="AudioStreamPlayer" parent="NPC/spiders"]
stream = ExtResource("4_d7eb3")

[node name="MoveArea" type="Area2D" parent="NPC/spiders"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NPC/spiders/MoveArea"]
polygon = PackedVector2Array(2, -190, 604, 160, -6, 515, -615, 163)

[node name="MoveArea2" type="Area2D" parent="NPC/spiders"]
position = Vector2(-1912, -5)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NPC/spiders/MoveArea2"]
polygon = PackedVector2Array(2, -190, 604, 160, -6, 515, -615, 163)

[node name="MoveArea3" type="Area2D" parent="NPC/spiders"]
position = Vector2(1920, -3)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NPC/spiders/MoveArea3"]
polygon = PackedVector2Array(616, 157, 353, 0, 250, 58, 0, -94, -85, -44, -174, -90, -611, 163, 5, 514)

[node name="Destinations" type="Node" parent="NPC"]

[node name="LR" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(-112, 230)
linked_destinations = [NodePath("../LR2"), NodePath("../LR3"), NodePath("../LRTransitionB")]
destination_orientation = Array[int]([3, 0, 2])

[node name="LR2" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(154, 365)
linked_destinations = [NodePath("../LR5"), NodePath("../LR"), NodePath("../LRTransitionK")]
destination_orientation = Array[int]([2, 0, 1])

[node name="LR3" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(-330, 47)
linked_destinations = [NodePath("../LRJobBook"), NodePath("../LRJobPump"), NodePath("../LR")]
destination_orientation = Array[int]([2, 1, 3])

[node name="LR4" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(452, 206)
linked_destinations = [NodePath("../LRJobTV"), NodePath("../LRTransitionK")]
destination_orientation = Array[int]([0, 2])

[node name="LR5" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(0, 457)
linked_destinations = [NodePath("../LR2"), NodePath("../LRTransitionB")]
destination_orientation = Array[int]([1, 0])

[node name="LRJobTV" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(190, 23)
cause_stop = true
stop_duration = 5
orientation = 1
linked_destinations = [NodePath("../LR4"), NodePath("../LRJobPump")]
destination_orientation = Array[int]([3, 0])

[node name="LRJobPump" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(-79, -93)
cause_stop = true
stop_duration = 2
orientation = 1
linked_destinations = [NodePath("../LRJobTV"), NodePath("../LR3")]
destination_orientation = Array[int]([3, 2])

[node name="LRJobBook" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(-453, 151)
cause_stop = true
stop_duration = 4
linked_destinations = [NodePath("../LR3"), NodePath("../LRTransitionB")]
destination_orientation = Array[int]([1, 3])

[node name="LRTransitionK" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(313, 293)
linked_destinations = [NodePath("../LR2"), NodePath("../LR4")]
destination_orientation = Array[int]([2, 1])

[node name="LRTransitionB" parent="NPC/Destinations" node_paths=PackedStringArray("linked_destinations") instance=ExtResource("5_5voa5")]
position = Vector2(-259, 321)
linked_destinations = [NodePath("../LR"), NodePath("../LRJobBook"), NodePath("../LR5")]
destination_orientation = Array[int]([1, 0, 3])

[node name="Camera" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="Camera"]
z_index = -5
scale = Vector2(1.4762552, 1.476255)
texture = ExtResource("6_dp7ty")

[node name="Destination" parent="." instance=ExtResource("5_5voa5")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5vw27")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1824.0374
offset_top = 136.17755
offset_right = 692.6489
offset_bottom = -796.27594
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
theme_override_styles/background = SubResource("StyleBoxFlat_cegan")
theme_override_styles/fill = SubResource("StyleBoxFlat_yaehf")
script = SubResource("GDScript_272bh")

[node name="ProgressBar5" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1824.0374
offset_top = 136.17755
offset_right = 692.6489
offset_bottom = -796.27594
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
texture = ExtResource("7_kdlwf")

[node name="ProgressBar2" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1659.0
offset_top = 206.0
offset_right = 527.6116
offset_bottom = -726.4535
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
scale = Vector2(0.4, 0.4)
theme_override_styles/background = SubResource("StyleBoxFlat_cegan")
theme_override_styles/fill = SubResource("StyleBoxFlat_82xsv")
script = SubResource("GDScript_yaehf")

[node name="ProgressBar6" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1659.0
offset_top = 206.0
offset_right = 527.6116
offset_bottom = -726.4535
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_kdlwf")

[node name="ProgressBar3" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1659.0
offset_top = 544.0
offset_right = 527.6116
offset_bottom = -388.4535
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
scale = Vector2(0.4, 0.4)
theme_override_styles/background = SubResource("StyleBoxFlat_cegan")
theme_override_styles/fill = SubResource("StyleBoxFlat_074og")
script = SubResource("GDScript_074og")

[node name="ProgressBar4" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1659.0
offset_top = 544.0
offset_right = 527.6116
offset_bottom = -388.4535
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5707964
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_kdlwf")

[node name="ButtonLeft" type="TextureButton" parent="CanvasLayer"]
offset_left = 494.0
offset_top = 767.0
offset_right = 706.0
offset_bottom = 925.0
texture_normal = ExtResource("8_qvni5")

[node name="ButtonRight" type="TextureButton" parent="CanvasLayer"]
offset_left = 1259.0
offset_top = 767.0
offset_right = 1471.0
offset_bottom = 925.0
texture_normal = ExtResource("8_qvni5")
flip_h = true

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 95.0
offset_top = 75.0
offset_right = 281.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("9_0owg7")
theme_override_font_sizes/font_size = 64
text = "00:00"
script = ExtResource("10_4mydg")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 858.0
offset_right = 756.0
offset_bottom = 1054.0
texture = ExtResource("11_5sf87")

[node name="Araignée" type="TextureRect" parent="CanvasLayer"]
offset_left = 1909.0
offset_top = 318.0
offset_right = 2352.0
offset_bottom = 403.0
rotation = 1.5707964
texture = ExtResource("12_83kta")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_j4xm5")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="Rooms" type="Node2D" parent="."]
script = ExtResource("14_hg8a6")

[node name="KitchenRoom" parent="Rooms" instance=ExtResource("15_w70r5")]
position = Vector2(1920, -6)

[node name="BathRoom" parent="Rooms" instance=ExtResource("16_2qko3")]
position = Vector2(-1920, 0)

[node name="LivingRoom" parent="Rooms" instance=ExtResource("17_csqer")]

[connection signal="input_event" from="NPC/spiders/MoveArea" to="NPC/spiders" method="_on_move_area_input_event"]
[connection signal="input_event" from="NPC/spiders/MoveArea2" to="NPC/spiders" method="_on_move_area_input_event"]
[connection signal="input_event" from="NPC/spiders/MoveArea3" to="NPC/spiders" method="_on_move_area_input_event"]
[connection signal="pressed" from="CanvasLayer/ButtonLeft" to="Rooms" method="_on_button_left_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonRight" to="Rooms" method="_on_button_right_pressed"]
